clarify it's l-s not 1-s

--- a/2023-09-13_terminal.md
+++ b/2023-09-13_terminal.md
@@ -81,7 +81,7 @@ bash: cd: 1701: No such file or directory
 ```
 This means you just tried to **change directory** (`cd`) with an invalid **argument** (1701). Instead, try to change into a directory that does exist, such as "Documents", "Pictures", etc.
 
-Once you are in a new directory, you can look around and **list the contents** using the command `ls`:
+Once you are in a new directory, you can look around and **list the contents** using the command `ls` (that's the *letters* l-s, not one-s. It's short for "list"):
 
 ```bash
 ls
