"my computer" -> "this PC"

--- a/2023-09-13_terminal.md
+++ b/2023-09-13_terminal.md
@@ -153,7 +153,7 @@ All this typing can be a bit tiring, but there are two keyboard shortcuts that m
 **Tab completion** fills in the rest of a command or filename matching the first few characters. For example, if you start typing `cd "My` and then press "tab", it will list all the directories starting with "My" such as "My Music", "My Videos", etc. You can type more of the word and it will narrow down the options, and when there is only one possibilty remaining (e.g. "My M" narrows it down to "My Music"), the entire filename or command will fill in.
 
 ## Directory Maze
-Our intrepid IA Jordan has created a directory maze for you to explore. On a lab computer, open up Windows Explorer, click on "My Computer", then double click on the `I` Drive ("AcadShare1"). From there, go to `Labs->CompSci->Resources->Everyone->directory-maze`. Open a new Git Bash window by right-clicking in the empty white space of the folder and selecting "Git Bash Here". Alternatively, you can try navigating to it yourself with `cd` and tab completion, starting with `/i/Labs`.
+Our intrepid IA Jordan has created a directory maze for you to explore. On a lab computer, open up Windows Explorer, click on "This PC", then double click on the `I` Drive ("AcadShare1"). From there, go to `Labs->CompSci->Resources->Everyone->directory-maze`. Open a new Git Bash window by right-clicking in the empty white space of the folder and selecting "Git Bash Here". Alternatively, you can try navigating to it yourself with `cd` and tab completion, starting with `/i/Labs`.
 
 Once you have the directory maze open, try travelling around Alberta!
 
