Add making a list of objects

--- a/2023-12-04_classes.md
+++ b/2023-12-04_classes.md
@@ -22,3 +22,11 @@ Use your Circle and Rectangle classes in the following programs:
 1. In a given park, a circular running track is being built. Write a program that will allow the user to enter the **outer** radius of the track and the **inner** radius, then display the total track **area**.
 
 2. You want to create a poster that is rectangular in shape. Write a program that will allow the user to enter the **dimensions of the poster** and the **cost per square foot** for materials and print out the **cost of producing the poster**.
+
+## Creating multiple instances of a class
+In this exercise you will read student data from [students.txt](/img/students.txt) and create an instance of an object to represent each student.
+1. Write a class named `Student`. It's `__init__` method should accept arguments for **last_name** (string), **first_name** (string), and **gpa** (float), and assign these values to data attributes.
+
+2. Write code to read the student data from [students.txt](/img/students.txt). Create a `Student` object for each student (each row of the file). Add the `Student` objects to a list.
+
+3. Write a loop that checks each of the `Student` objects and prints the names of students with a GPA higher than 3.9.
