--- a/2023-12-04_classes.md
+++ b/2023-12-04_classes.md
@@ -26,7 +26,8 @@ Use your Circle and Rectangle classes in the following programs:
 ## Creating multiple instances of a class
 In this exercise you will read student data from [students.txt](/img/students.txt) and create an instance of an object to represent each student.
 1. Write a class named `Student`. It's `__init__` method should accept arguments for **last_name** (string), **first_name** (string), and **gpa** (float), and assign these values to data attributes.
+    - Alternatively, `__init__` could accept a single string argument - a string line from the students.txt file. The parsing and assignment of the individual values to data attributes could then happen inside `__init__`
 
-2. Write code to read the student data from [students.txt](/img/students.txt). Create a `Student` object for each student (each row of the file). Add the `Student` objects to a list.
+3. Write code to read the student data from [students.txt](/img/students.txt). Create a `Student` object for each student (each row of the file). Add the `Student` objects to a list.
 
-3. Write a loop that checks each of the `Student` objects and prints the names of students with a GPA higher than 3.9.
+4. Write a loop that checks each of the `Student` objects and prints the names of students with a GPA higher than 3.9.
